tests/paczka1/fuzzy1/80877619.err
Error in line 5: tRri6KU5j S510 25,1
Error in line 10: jj3mOQ2 S510 25,6
Error in line 19: jj3mOQ2 A836 42,4
Error in line 22: g01bungO S236 19,3
Error in line 18: S236 S510 25,1
Error in line 26: jj3mOQ2 S510 26,5
